# transfer

./: .gitignore  README.md  memo.txt
ctransfer/: CMakeLists.txt  client.c  client.h  config.c  config.h  def.h  log.c  log.h  main.c  notify.c  notify.h  util.c  util.h
ctransfer/conf/: example.conf
stransfer/: CMakeLists.txt  config.c  config.h  def.h  log.c  log.h  main.c  server.c  server.h  util.c  util.h
stransfer/conf/: example.conf
